[build-system]
requires = [
  "scikit-build-core>=0.11",
  "pybind11>=2.11",
]
build-backend = "scikit_build_core.build"

[project]
name = "lahuta"
version = "0.3.0"
description = "C++ bindings for Lahuta"
authors = [{name = "Besian I Sejdiu, PhD (bisejdiu)"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "orjson",
    "cloudpickle",
    "packaging",
]

[tool.scikit-build]
minimum-version = "0.8"

[tool.scikit-build.cmake]
version = ">=3.20"
source-dir = "../../core"
build-type = "Release"
args = [
  "-DLAHUTA_BUILD_CLI=OFF",
  "-DLAHUTA_GENERATE_PY_STUBS=ON",
  "-DLAHUTA_VENDOR_BOOST=ON",
]

[tool.scikit-build.wheel]
packages = ["lahuta"]

[tool.scikit-build.editable]
mode = "redirect"

[tool.scikit-build.sdist]
include = [
  "lahuta/**",
  "README.md",
  "external/pybind11_stubgen.py",
]

[tool.ruff]
line-length = 120
lint.isort = { known-first-party = ['lahuta'] }
target-version = "py310"


[tool.ruff.lint.per-file-ignores]
"*.pyi" = ["ANN"]
"tests/typecheck/*.py" = ["F401", "F841"]
"*" = ["E701", "E702"]
"lahuta/__init__.py" = ["F405"]
"lahuta/mapping/__init__.py" = ["F405"]

[tool.pytest.ini_options]
testpaths = ["tests"]
minversion = 7.4
addopts = "--maxfail=18"
log_level = "INFO"
